<resources>
    <string name="app_name">AppLeitura</string>
    <string name="login_click_nao_cadastrado"><u>Não está cadastrado?</u></string>
    <string name="login_edtxt_hint_usuario">Usuario</string>
    <string name="login_edtxt_hint_senha">Senha</string>
    <string name="login_txt_conectado">Mantenha-me conectado</string>
    <string name="login_btn_login">Login</string>
    <string name="login_img_description">AppImagem</string>
    <string name="cadastro_edtxt_nome">Nome</string>
    <string name="cadastro_edtxt_confirme_senha">Confirme a senha</string>
    <string name="cadastro_edtxt_data_nascimento">Data de nascimento</string>
    <string name="cadastro_btn_finalizar">Finalizar</string>
    <string name="cadastro_btn_cancelar">Cancelar</string>
    <string name="cadastro_error_txtStatus_espaco_senha">Sem espaços na senha</string>
    <string name="cadastro_error_txtStatus_senha_grande">Senha muito grande</string>
    <string name="cadastro_error_txtStatus_nome_apenasLetras">Digite apenas letras</string>
    <string name="cadastro_error_txtStatus_muitos_espacos">Muitos espaços</string>
    <string name="cadastro_error_txtStatus_nome_grande">Nome muito grande</string>
    <string name="cadastro_error_txtStatus_apenasLetrasNumeros">Digite apenas letras ou numeros</string>
    <string name="cadastro_error_txtStatus_nomeUsuarioGrande">Nome de usuario muito grande</string>
    <string name="cadastro_error_txtStatus_semDataNascimento">Coloque a data de nascimento</string>
    <string name="cadastro_error_txtStatus_senhasDiferentes">As senhas não são iguais</string>
    <string name="cadastro_error_txtStatus_senhaPequena">Senha muito pequena</string>
    <string name="cadastro_error_txtStatus_nomePequeno">Nome muito pequeno</string>
    <string name="cadastro_error_txtStatus_usuarioPequeno">Nome de usuario muito pequeno</string>
    <string name="cadastro_error_txtStatus_usuarioJaCadastrado">Nome de usuario já cadastrado</string>
    <string name="login_error_senhaIncorreta">Senha incorreta</string>
    <string name="login_error_usuarioNaoEncontrado">Usuario não encontrado</string>
    <string name="cadastro_error_txtstatus_dataMuitoNovo">Você é do futuro?</string>
    <string name="cadastro_error_txtstatus_dataNascimentoInvalida">Coloque uma data de nascimento valida</string>
    <string name="cv_txt_InicioLeitura">Início da Leitura:</string>
    <string name="cv_txt_FimLeitura">Fim da leitura:</string>
    <string name="livroform_txtAsterisco">*</string>
    <string name="livroform_edtxt_nomeLivro">Nome do Livro</string>
    <string name="livroform_edtxt_autorLivro">Autor do Livro</string>
    <string name="livroform_edtxt_anoLivro">Ano de publicação</string>
    <string name="livroform_edtxt_inicioLeitura">Data de início da leitura</string>
    <string name="livroform_edtxt_fimLeitura">Data de termino da leitura</string>
    <string name="livroform_edtxt_avaliacao">Avaliação</string>
    <string name="livroform_edtxt_statusLeitura">Status da Leitura</string>
    <string name="livroform_txt_paginas">Páginas</string>
    <string name="livroform_edtxt_paginasLidas">Lidas</string>
    <string name="livroform_edtxt_paginasTotal">Total</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="popup_capitulo_editar">Editar</string>
    <string name="popup_capitulo_excluir">Excluir</string>
    <string name="popup_comentario_addComentario">Adicionar Comentario</string>
    <string name="popup_comentario_excluir">Excluir</string>
    <string name="livro_nome_grande">Nome do livro muito grande</string>
    <string name="livro_leitura_nao_iniciada">Você ainda não iniciou a leitura</string>
    <string name="livro_jaLido">Você já leu este livro</string>
    <string name="livro_paginas_vazio">Total de paginas vazio</string>
    <string name="error_livro_jaExiste">Já existe um livro com o mesmo nome</string>
    <string name="erro_livro_nome_curto">Nome do livro muito curto ou vazio</string>
    <string name="erro_livro_autor_curto">Nome do autor muito curto ou vazio</string>
    <string name="erro_livro_ano_vazio">Ano de publicação não pode ficar vazio</string>
    <string name="erro_livro_status_vazio">Status da leitura não pode ficar vazio</string>
    <string name="erro_livro_paginas_total_vazio">Total de páginas não pode ficar vazio</string>
    <string name="imagem_app">imagem app</string>
    <string name="dialog_comentarios_meus_comentarios">Meus comentarios</string>
    <string name="dialog_nome_capitulo">Nome</string>
    <string name="dialog_novo_comentario">Novo comentario</string>
    <string name="dialog_hint_digite_seu_comentario">Digite seu comentario…</string>
    <string name="dialog_number_menos_100">-100</string>
    <string name="dialog_number_mais_100">+100</string>
    <string name="menu_log_out">Log Out</string>
    <string name="menu_editar">Editar</string>
    <string name="menu_detalhes">Detalhes</string>
    <string name="menu_excluir">Excluir</string>
</resources>
