<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@android:color/white"
    android:theme="@style/Theme.AppCompat.Light">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_novo_comentario"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@android:color/darker_gray"/>

    <EditText
        android:id="@+id/dialog_newComment_edtxt_comentario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_hint_digite_seu_comentario" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_newComment_btn_cancelar"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/cadastro_btn_cancelar"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/dialog_newComment_btn_finalizar"
            android:layout_weight="1"
            android:text="@string/cadastro_btn_finalizar"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>
