<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@android:color/white"
    android:theme="@style/Theme.AppCompat.Light">

    <TextView
        android:id="@+id/dialog_novo_capitulo_txtCap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/dialog_novo_capitulo_edtxtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_nome_capitulo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_novo_capitulo_btnCancelar"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_btn_cancelar"/>

        <Button
            android:id="@+id/dialog_novo_capitulo_btnFinalizar"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_btn_finalizar"/>

    </LinearLayout>

</LinearLayout>
