<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#26AE90"
    tools:context="com.antonio.appleitura.Login">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/login_livro"
        android:contentDescription="@string/login_img_description" />

    <TextView
        android:id="@+id/login_txt_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@android:color/holo_red_light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_marginTop="5dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <EditText
            android:id="@+id/login_edtxt_usuario"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:hint="@string/login_edtxt_hint_usuario"
            android:textSize="20sp"
            android:longClickable="false"
            android:background="@android:color/transparent"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <EditText
            android:id="@+id/login_edtxt_senha"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:hint="@string/login_edtxt_hint_senha"
            android:textSize="20sp"
            android:longClickable="false"
            android:inputType="textPassword"
            android:background="@android:color/transparent"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_clicklayout_conectado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="23dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="setConectado">

        <CheckBox
            android:id="@+id/login_checkbox_conectado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_txt_conectado"
            android:textSize="16sp"/>


    </LinearLayout>

    <Button
        android:id="@+id/login_btn_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/login_btn_login"
        android:layout_marginTop="20dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:backgroundTint="#D6D7D7"
        android:textColor="#26AE90"
        android:onClick="logarConta"/>

    <TextView
        android:id="@+id/login_clicktxt_naocadastrado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/login_click_nao_cadastrado"
        android:textSize="17sp"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackground"
        android:onClick="abrirTelaCadastro"/>

</LinearLayout>
